--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Byte-compiled / optimized files
 __pycache__/
 *.py[cod]
@@ -134,5 +135,6 @@ Characters/
 Logs/
 #Tools/
 Configuration/
+Armures/
 main.spec
 #requirements.txt
