--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,8 @@ shadowcopy==0.0.4
 urllib3==2.5.0
 wheel==0.45.1
 WMI==1.5.1
+selenium==4.15.2
+beautifulsoup4==4.12.2
+lxml==4.9.3
+webdriver-manager==4.0.1
 PySide6
