chore: Remove database backup files from version control
- Removed all items_database_src_backup_*.json files from git tracking
- Added Data/Backups/items_database_src_backup_*.json to .gitignore
- These backup files are generated automatically and should not be versioned

--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,9 @@ Armures/
 main.spec
 #requirements.txt
 
+# Database backups
+Data/Backups/items_database_src_backup_*.json
+
 # Debug files
 Scripts/debug_herald_page.html
 debug_wealth_page.html
