--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyinstaller-hooks-contrib==2025.9
 pywin32==311
 pywin32-ctypes==0.2.3
 requests==2.32.5
+ruff==0.8.2
 setuptools==80.9.0
 shadowcopy==0.0.4
 urllib3==2.5.0
